# auc

./: LICENSE  README.md  dev-requirements.txt  pyproject.toml
src/auc/: __init__.py  network.py
tests/: test_auc.py
