[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auc"
version = "0.1.0"
authors = [
    { name = "Wensheng Wang", email = "wenshengwang@gmail.com" },
]
description = "AUC network"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wensheng/auc"
"Bug Tracker" = "https://github.com/wensheng/auc/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
